# doglib

./: .gitignore  README.md  pyproject.toml
examples/: custom_styling.py  dplot_style.py  gallery.py  isolines_interactive.py  plotly_dash_viewer.py  plotly_interactive_widget.py  plotly_multi_curve.py  plotly_quickstart.py  plotly_styles.py  plotly_zoom_levels.py  shock_spectrum.py
scripts/: debug.py  dump_labels.py  gallery_viewer.py  verify_lines.py  verify_on_line.py  viewer.py
src/triplot/: __init__.py  axes.py  core.py  diagonals.py  isolines.py  ticks.py  units.py
src/triplot/backends/: __init__.py  base.py  matplotlib_backend.py  plotly_backend.py
tests/: test_branches.py  test_correctness.py  test_diagonals.py  test_draw.py  test_isolines.py  test_performance.py  test_permanence.py  test_plotly.py  test_properties.py  test_registration.py  test_ticks.py
