[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triplot"
version = "0.1.0"
description = "Tripartite (shock response spectrum) plots with pluggable matplotlib / plotly backends"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "pmarq" }]
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.22",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-mpl", "plotly>=5"]
plotly = ["plotly>=5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
